# mlflow-playground

./: .gitignore  README.md  pyproject.toml
src/mlflow_playground/: __init__.py  diabetes.py  wine_train.py
